<resources>
    <string name="app_name">Apply</string>
    <string name="action_settings">Settings</string>
    <string name="hint_title">Enter job title</string>
    <string name="hint_employer">Enter employer name</string>
    <string name="hint_email">Enter contact email</string>
    <string name="hint_summary">Enter job summary</string>
    <string name="hint_description">Enter job description</string>
    <string name="hint_location">Enter job location</string>
    <string name="hint_hours">Enter weekly hours</string>
    <string name="button_save">Save</string>
    <string name="clear_all_data">Clear all data</string>
    <string name="apply">Apply</string>
    <string name="submit_a_new_job">Submit a new job</string>
    <string name="job_title">Job title:</string>
    <string name="employer_name">Employer name:</string>
    <string name="contact_email">Contact Email:</string>
    <string name="job_summary">Job Summary:</string>
    <string name="job_description">Job Description:</string>
    <string name="placeholder_employer">Placeholder employer</string>
    <string name="location_placeholder">Location: </string>
    <string name="placeholder">Placeholder</string>
    <string name="weekly_hours">Weekly hours:</string>
    <string name="placeholder_job_description_text">Placeholder job description text</string>
    <string name="desc_buffer">\n\n\n\n</string>
    <string name="location">Location</string>
    <string name="hours">Hours</string>
    <string name="location_header">Location:</string>
    <string name="hours_header">Hours:</string>

    <string-array name="locations">
        <item>Northland</item>
        <item>Auckland</item>
        <item>Waikato</item>
        <item>Bay of Plenty</item>
        <item>Gisborne</item>
        <item>Taranaki</item>
        <item>Manawatu</item>
        <item>Wellington</item>
        <item>Tasman</item>
        <item>Nelson</item>
        <item>Marlborough</item>
        <item>West Coast</item>
        <item>Canterbury</item>
        <item>Otago</item>
        <item>Southland</item>
    </string-array>
</resources>